fixes logout button not showing

--- a/the-elder-chores-user-ui/src/app/App.css
+++ b/the-elder-chores-user-ui/src/app/App.css
@@ -33,11 +33,6 @@ li a{
   margin: 18px 0 0 10px;
 }
 
-.item-long {
-  width: 150px;
-  margin-top: 18px;
-}
-
 .App {
   text-align: center;
 }
